fixed articles fetching

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -32,7 +32,7 @@
         </mat-list-item>
         <mat-divider *ngIf="authService.getUser()"></mat-divider>
         <mat-list-item>
-          <a style="text-decoration: none; color: black" href='https://github.com'>
+          <a style="text-decoration: none; color: black" href='https://github.com/Yamanlk/MEAN-Blog'>
             <mat-icon class="im im-github" style="margin-right: 10px"></mat-icon>Open on Github
           </a>
         </mat-list-item>
