--- a/front-end/src/app/article-details/article-details.component.css
+++ b/front-end/src/app/article-details/article-details.component.css
@@ -30,6 +30,7 @@
 .article mat-card-content {
     text-align: justify;
     text-justify: auto;
+    overflow: hidden;
 }
 
 .article mat-card-header {
