--- a/front-end/src/app/article/article.component.html
+++ b/front-end/src/app/article/article.component.html
@@ -21,7 +21,7 @@
         </button>
     </section>
     <mat-divider style="margin-top: 20px"></mat-divider>
-    <p style="margin: 0px 60px; text-justify: auto; text-align: justify">
+    <p style="margin: 0px 60px; text-justify: auto; text-align: justify; overflow-wrap: break-word">
         {{article.content}}
     </p>
     <mat-divider></mat-divider>
