fixing style issues

--- a/front-end/src/app/article-details/article-details.component.html
+++ b/front-end/src/app/article-details/article-details.component.html
@@ -2,7 +2,7 @@
     <div class="continue-reading" [routerLink]="['blog', article._id]">
         <mat-icon class="material-icons" style="margin-left: 36px; margin-top: 15px;">keyboard_arrow_right</mat-icon>
     </div>
-    <mat-card-header style="overflow-wrap: break-word">
+    <mat-card-header>
         {{article.title}}
     </mat-card-header>
     <mat-card-content>
