--- a/front-end/src/app/article-details/article-details.component.css
+++ b/front-end/src/app/article-details/article-details.component.css
@@ -1,8 +1,6 @@
 @media(max-width: 500px) {
     .article {
         width: 200px;
-        margin-left: 0px;
-        
     }
     .continue-reading {
         left: 157px;
@@ -11,7 +9,6 @@
 @media(min-width: 500px) {
     .article {
         width: 328px;
-        margin-left: 20px;
     }
     .continue-reading {
         left: 285px;
@@ -23,7 +20,8 @@
 .article {
     display: flex;
     flex-direction: column;
-    margin-right: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
     margin-top: 20px;
 }
 
@@ -37,6 +35,7 @@
     margin: 25px 0px;
     font-size: 25px;
     font-weight: 600;
+    overflow: hidden;
 }
 
 .article mat-card-actions {
