--- a/front-end/src/app/article/article.component.html
+++ b/front-end/src/app/article/article.component.html
@@ -20,9 +20,9 @@
             <mat-icon>favorite</mat-icon>
         </button>
     </section>
-    <mat-divider style="margin-top: 20px"></mat-divider>
-    <p style="margin: 0px 60px; text-justify: auto; text-align: justify; overflow-wrap: break-word">
+    <mat-divider style="margin: 20px auto; width: 80%"></mat-divider>
+    <p style="margin: 0px auto; width: 80%; text-justify: auto; text-align: justify; overflow-wrap: break-word">
         {{article.content}}
     </p>
-    <mat-divider></mat-divider>
+    <mat-divider style="margin: 20px auto; width: 80%"></mat-divider>
 </div>
