--- a/front-end/src/app/article-form/article-form.component.css
+++ b/front-end/src/app/article-form/article-form.component.css
@@ -1,3 +1,8 @@
-mat-form-field {
-    width: 100%;
+.article-form {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.article-form > * {
+    margin: 0px 10px;
 }
