--- a/front-end/src/app/article-form/article-form.component.html
+++ b/front-end/src/app/article-form/article-form.component.html
@@ -1,51 +1,45 @@
-<form #f="ngForm" (submit)="submitArticle(f.value)">
-    <mat-grid-list cols="1" rowHeight="100px" style="max-width: 500px; margin: 0 auto">
-        <mat-grid-tile colspan="1">
-            <h2 style="text-align: center">Article Form</h2>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <mat-form-field appearance="outline">
-                <mat-label>Title</mat-label>
-                <input matInput type="text" ngModel name="title" #titleInput="ngModel"
-                    [minlength]="globals.AtricleValidationGlobals.title.minLength"
-                    [maxLength]="globals.AtricleValidationGlobals.title.maxLength"
-                    [required]="globals.AtricleValidationGlobals.title.required"
-                    [pattern]="globals.AtricleValidationGlobals.title.onlyIncludeRegex">
-                <mat-hint align="end">
-                    {{titleInput.value?.length}}/{{globals.AtricleValidationGlobals.title.maxLength}}</mat-hint>
+<mat-card>
+    <mat-card-title style="text-align: center">
+        Article Form
+    </mat-card-title>
+    <form [formGroup]="articleForm" class="article-form" (submit)="submitArticle()">
+        <mat-form-field appearance="outline" style="flex: 100%">
+            <mat-label>Title</mat-label>
+            <input matInput formControlName="title">
+            <mat-error *ngIf="title.getError('minlength') && !title.getError('pattern')">should be at least {{globals.AtricleValidationGlobals.title.minLength}} letters</mat-error>
+            <mat-error *ngIf="title.getError('maxlength') && !title.getError('pattern')">should be at most {{globals.AtricleValidationGlobals.title.maxLength}} letters</mat-error>
+            <mat-error *ngIf="title.getError('pattern')">you have use unpermitted letters</mat-error>
+        </mat-form-field>
 
-                <mat-error *ngIf="titleInput.hasError('minlenght')">Should be at least
-                    {{globals.AtricleValidationGlobals.title.minLength}} letters</mat-error>
-                <mat-error *ngIf="titleInput.hasError('pattern')">you have used unpermitted letters</mat-error>
-            </mat-form-field>
-        </mat-grid-tile>
+        <mat-form-field cdkTextareaAutosize appearance="outline" style="flex: 100%">
+            <mat-label>Content</mat-label>
+            <textarea matInput cdkTextareaAutosize cdkAutosizeMaxRows="auto" cdkAutosizeMinRows="10" formControlName="content"></textarea>
+            <mat-error *ngIf="content.getError('minlength') && !content.getError('pattern')">should be at least {{globals.AtricleValidationGlobals.content.minLength}} letters</mat-error>
+            <mat-error *ngIf="content.getError('maxlength') && !content.getError('pattern')">should be at most {{globals.AtricleValidationGlobals.content.maxLength}} letters</mat-error>
+            <mat-error *ngIf="content.getError('pattern')">you have use unpermitted letters</mat-error>
+            <mat-hint align="end">{{content.value.length}}/{{globals.AtricleValidationGlobals.content.maxLength}}</mat-hint>
+        </mat-form-field>
+        <mat-form-field style="flex: 100%" appearance="outline">
+            <mat-label>Languages</mat-label>
+            <mat-chip-list #tagsChipList formControlName="categories">
+                <mat-chip *ngFor="let tag of tags" removable="true" (click)="onSelectChip(tag)"
+                    selectable="true" (removed)="removeTag(tag)">
+                    {{tag}}
+                    <mat-icon matChipRemove>cancel</mat-icon>
+                </mat-chip>
 
-        <mat-grid-tile colSpan="1" rowspan="5">
-            <mat-form-field appearance="outline">
-                <mat-label>Content</mat-label>
-                <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="22" type="text" ngModel name="content"
-                    #contentInput="ngModel" [minlength]="globals.AtricleValidationGlobals.content.minLength"
-                    [maxLength]="globals.AtricleValidationGlobals.content.maxLength"
-                    [required]="globals.AtricleValidationGlobals.content.required"
-                    [pattern]="globals.AtricleValidationGlobals.content.onlyIncludeRegex">
-            </textarea>
-                <mat-hint align="end">
-                    {{contentInput.value?.length}}/{{globals.AtricleValidationGlobals.content.maxLength}}</mat-hint>
-                <mat-error *ngIf="contentInput.hasError('minlenght')">Should be at least
-                    {{globals.AtricleValidationGlobals.content.minLength}} letters</mat-error>
-                <mat-error *ngIf="contentInput.hasError('pattern')">you have used unpermitted letters</mat-error>
-            </mat-form-field>
-        </mat-grid-tile>
-        <mat-grid-tile colspan="1" rowspan="3">
-            <mat-selection-list ngModel name="categories" style="width: 100%">
-                <mat-list-option [value]="category" *ngFor="let category of globals.AtricleValidationGlobals.categories">
-                    {{category}}
-                </mat-list-option>
-            </mat-selection-list>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <button mat-flat-button style="width: 100%" color="primary" type="submit"
-                [disabled]="f.invalid">Creat</button>
-        </mat-grid-tile>
-    </mat-grid-list>
-</form>
+                <mat-autocomplete #tagsAutocomplete="matAutocomplete" (optionSelected)="onSelectTag($event)">
+                    <mat-option *ngFor="let option of tagsOptions | async" [value]="option">
+                        {{option}}
+                    </mat-option>
+                </mat-autocomplete>
+
+                <input #tagInput formControlName="categoriesInput" [matAutocomplete]="tagsAutocomplete" [matChipInputFor]="tagsChipList"
+                    [matChipInputSeparatorKeyCodes]="seperationKeys" MatChipAddOnBlur="true"
+                    (matChipInputTokenEnd)="addTag($event)">
+            </mat-chip-list>
+        </mat-form-field>
+        <button mat-raised-button color="accent" style="flex: 1;">Cancel</button>
+        <button mat-raised-button color="primary" style="flex: 3;" [disabled]="articleForm.invalid">Post</button>
+    </form>
+</mat-card>
